Разработка разметки экрана подключения (LogonScreen)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="stake">Ставки</string>
     <string name="prognosis">Прогноз</string>
     <string name="games">Игры</string>
+    <string name="login">Авторизация</string>
+    <string name="sign_in">Регистрация</string>
 </resources>
