--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="stake">Ставки</string>
     <string name="prognosis">Прогноз</string>
     <string name="games">Игры</string>
-    <string name="login">Авторизация</string>
-    <string name="sign_in">Регистрация</string>
+    <string name="sign_in">Авторизация</string>
+    <string name="sign_up">Регистрация</string>
 </resources>
